browser-specific layout fixes for scrollbar issues
git-svn-id: http://code.creativecommons.org/svnroot/ccsearch/branches/iframe-pretty@13113 aec4f576-4910-0410-beeb-ecb0427469e7

--- a/search-ie.css
+++ b/search-ie.css
@@ -6,6 +6,19 @@
  *
  */
 
+body{
+   overflow: visible;
+}
+
+#results-box{
+   background-color: #456724;
+   vertical-align: top;
+}
+
+#results{
+   height: 400px;
+   vertical-align: top;
+}
 
 #left{
   width: 350px;
